fixes padding on small media querie

--- a/css/styles.css
+++ b/css/styles.css
@@ -155,18 +155,18 @@ footer{
 @media (max-width: 720px){
 
   .sect_information{
-    padding: 0 10px;
+    padding: 0 30px;
     margin-top: 25px;
   }
 
   .sect_schedule{
-    padding: 0 10px;
+    padding: 0 30px;
     margin-top: 25px;
 
   }
 
   .sect_restrictions{
-    padding: 0 10px;
+    padding: 0 30px;
     margin-top: 25px;
 
   }
